codex-agent-runtime-desktop/native/c-api/include/codex_agent.h

typedef int32_t codex_agent_status_t;
typedef struct codex_agent_context codex_agent_context_t;
typedef struct codex_agent_plugin_skill codex_agent_plugin_skill_t;
typedef struct codex_agent_connector codex_agent_connector_t;
typedef struct codex_agent_plugin_summary codex_agent_plugin_summary_t;
typedef struct codex_agent_plugin_catalog codex_agent_plugin_catalog_t;
typedef struct codex_agent_plugin_detail codex_agent_plugin_detail_t;
typedef struct codex_agent_plugin_install_result codex_agent_plugin_install_result_t;
typedef struct codex_agent_hook_handler_agent codex_agent_hook_handler_agent_t;
typedef struct codex_agent_hook_handler_command codex_agent_hook_handler_command_t;
typedef int32_t codex_agent_catalog_freshness_t;
typedef int32_t codex_agent_plugin_auth_policy_t;
typedef int32_t codex_agent_plugin_install_policy_t;
typedef struct codex_agent_string_view {
    const uint8_t *data;
    size_t size;
} codex_agent_string_view_t;
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_hook_handler_agent_acquire(
    codex_agent_context_t *context,
    codex_agent_hook_handler_agent_t **out_handler);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_hook_handler_agent_destroy(
    codex_agent_context_t *context,
    codex_agent_hook_handler_agent_t **handler);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_hook_handler_command_create(
    codex_agent_context_t *context,
    const codex_agent_string_view_t *command,
    int32_t is_async,
    codex_agent_hook_handler_command_t **out_handler);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_hook_handler_command_destroy(
    codex_agent_context_t *context,
    codex_agent_hook_handler_command_t **handler);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_hook_handler_command_command_copy(
    codex_agent_context_t *context,
    codex_agent_hook_handler_command_t *handler,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_skill_destroy(
    codex_agent_context_t *context,
    codex_agent_plugin_skill_t **skill);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_skill_name_copy(
    codex_agent_context_t *context,
    codex_agent_plugin_skill_t *skill,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_skill_description_copy(
    codex_agent_context_t *context,
    codex_agent_plugin_skill_t *skill,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_skill_is_enabled(
    codex_agent_context_t *context,
    codex_agent_plugin_skill_t *skill,
    int32_t *out_is_enabled);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_skill_has_path(
    codex_agent_context_t *context,
    codex_agent_plugin_skill_t *skill,
    int32_t *out_has_path);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_skill_path_copy(
    codex_agent_context_t *context,
    codex_agent_plugin_skill_t *skill,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_summary_is_enabled(
    codex_agent_context_t *context,
    codex_agent_plugin_summary_t *summary,
    int32_t *out_is_enabled);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_summary_install_policy(
    codex_agent_context_t *context,
    codex_agent_plugin_summary_t *summary,
    codex_agent_plugin_install_policy_t *out_install_policy);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_summary_auth_policy(
    codex_agent_context_t *context,
    codex_agent_plugin_summary_t *summary,
    codex_agent_plugin_auth_policy_t *out_auth_policy);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_summary_is_available(
    codex_agent_context_t *context,
    codex_agent_plugin_summary_t *summary,
    int32_t *out_is_available);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_summary_capabilities_count(
    codex_agent_context_t *context,
    codex_agent_plugin_summary_t *summary,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_summary_capabilities_copy_at(
    codex_agent_context_t *context,
    codex_agent_plugin_summary_t *summary,
    size_t index,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_summary_has_brand_color(
    codex_agent_context_t *context,
    codex_agent_plugin_summary_t *summary,
    int32_t *out_has_brand_color);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_summary_brand_color_copy(
    codex_agent_context_t *context,
    codex_agent_plugin_summary_t *summary,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_summary_has_privacy_policy_url(
    codex_agent_context_t *context,
    codex_agent_plugin_summary_t *summary,
    int32_t *out_has_privacy_policy_url);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_summary_privacy_policy_url_copy(
    codex_agent_context_t *context,
    codex_agent_plugin_summary_t *summary,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_summary_has_terms_of_service_url(
    codex_agent_context_t *context,
    codex_agent_plugin_summary_t *summary,
    int32_t *out_has_terms_of_service_url);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_summary_terms_of_service_url_copy(
    codex_agent_context_t *context,
    codex_agent_plugin_summary_t *summary,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_summary_has_website_url(
    codex_agent_context_t *context,
    codex_agent_plugin_summary_t *summary,
    int32_t *out_has_website_url);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_summary_website_url_copy(
    codex_agent_context_t *context,
    codex_agent_plugin_summary_t *summary,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_catalog_destroy(
    codex_agent_context_t *context,
    codex_agent_plugin_catalog_t **catalog);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_catalog_plugins_count(
    codex_agent_context_t *context,
    codex_agent_plugin_catalog_t *catalog,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_catalog_plugins_at(
    codex_agent_context_t *context,
    codex_agent_plugin_catalog_t *catalog,
    size_t index,
    codex_agent_plugin_summary_t **out_summary);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_catalog_errors_count(
    codex_agent_context_t *context,
    codex_agent_plugin_catalog_t *catalog,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_catalog_errors_copy_at(
    codex_agent_context_t *context,
    codex_agent_plugin_catalog_t *catalog,
    size_t index,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_catalog_freshness(
    codex_agent_context_t *context,
    codex_agent_plugin_catalog_t *catalog,
    codex_agent_catalog_freshness_t *out_freshness);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_detail_destroy(
    codex_agent_context_t *context,
    codex_agent_plugin_detail_t **detail);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_detail_summary(
    codex_agent_context_t *context,
    codex_agent_plugin_detail_t *detail,
    codex_agent_plugin_summary_t **out_summary);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_detail_description_copy(
    codex_agent_context_t *context,
    codex_agent_plugin_detail_t *detail,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_detail_skills_count(
    codex_agent_context_t *context,
    codex_agent_plugin_detail_t *detail,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_detail_skills_at(
    codex_agent_context_t *context,
    codex_agent_plugin_detail_t *detail,
    size_t index,
    codex_agent_plugin_skill_t **out_skill);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_detail_connectors_count(
    codex_agent_context_t *context,
    codex_agent_plugin_detail_t *detail,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_detail_connectors_at(
    codex_agent_context_t *context,
    codex_agent_plugin_detail_t *detail,
    size_t index,
    codex_agent_connector_t **out_connector);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_detail_mcp_servers_count(
    codex_agent_context_t *context,
    codex_agent_plugin_detail_t *detail,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_detail_mcp_servers_copy_at(
    codex_agent_context_t *context,
    codex_agent_plugin_detail_t *detail,
    size_t index,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_detail_hook_count(
    codex_agent_context_t *context,
    codex_agent_plugin_detail_t *detail,
    int32_t *out_hook_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_install_result_destroy(
    codex_agent_context_t *context,
    codex_agent_plugin_install_result_t **result);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_install_result_auth_policy(
    codex_agent_context_t *context,
    codex_agent_plugin_install_result_t *result,
    codex_agent_plugin_auth_policy_t *out_auth_policy);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_install_result_connectors_count(
    codex_agent_context_t *context,
    codex_agent_plugin_install_result_t *result,
    size_t *out_count);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_install_result_connectors_at(
    codex_agent_context_t *context,
    codex_agent_plugin_install_result_t *result,
    size_t index,
    codex_agent_connector_t **out_connector);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_install_result_has_message(
    codex_agent_context_t *context,
    codex_agent_plugin_install_result_t *result,
    int32_t *out_has_message);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_install_result_message_copy(
    codex_agent_context_t *context,
    codex_agent_plugin_install_result_t *result,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);