codex-agent-runtime-desktop/bindings/csharp/src/CodexAgent/Interop/NativeLeafValueMethods.cs

    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_summary_is_enabled")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginSummaryIsEnabled(nint c,nint value,out int result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_summary_install_policy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginSummaryInstallPolicy(nint c,nint value,out CodexPluginInstallPolicy result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_summary_auth_policy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginSummaryAuthPolicy(nint c,nint value,out CodexPluginAuthPolicy result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_summary_is_available")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginSummaryIsAvailable(nint c,nint value,out int result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_summary_capabilities_count")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginSummaryCapabilitiesCount(nint c,nint value,out nuint count);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_summary_capabilities_copy_at")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginSummaryCapabilitiesCopyAt(nint c,nint value,nuint index,byte* b,nuint n,out nuint r);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_summary_has_brand_color")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginSummaryHasBrandColor(nint c,nint value,out int result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_summary_brand_color_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginSummaryBrandColorCopy(nint c,nint value,byte* b,nuint n,out nuint r);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_summary_has_privacy_policy_url")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginSummaryHasPrivacyPolicyUrl(nint c,nint value,out int result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_summary_privacy_policy_url_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginSummaryPrivacyPolicyUrlCopy(nint c,nint value,byte* b,nuint n,out nuint r);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_summary_has_terms_of_service_url")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginSummaryHasTermsOfServiceUrl(nint c,nint value,out int result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_summary_terms_of_service_url_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginSummaryTermsOfServiceUrlCopy(nint c,nint value,byte* b,nuint n,out nuint r);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_summary_has_website_url")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginSummaryHasWebsiteUrl(nint c,nint value,out int result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_summary_website_url_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginSummaryWebsiteUrlCopy(nint c,nint value,byte* b,nuint n,out nuint r);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_skill_destroy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginSkillDestroy(nint c,ref nint value);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_skill_name_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginSkillNameCopy(nint c,nint value,byte* b,nuint n,out nuint r);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_skill_description_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginSkillDescriptionCopy(nint c,nint value,byte* b,nuint n,out nuint r);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_skill_is_enabled")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginSkillIsEnabled(nint c,nint value,out int result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_skill_has_path")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginSkillHasPath(nint c,nint value,out int result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_skill_path_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginSkillPathCopy(nint c,nint value,byte* b,nuint n,out nuint r);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_catalog_destroy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginCatalogDestroy(nint c,ref nint value);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_catalog_plugins_count")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginCatalogPluginsCount(nint c,nint value,out nuint count);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_catalog_plugins_at")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginCatalogPluginsAt(nint c,nint value,nuint index,out nint result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_catalog_errors_count")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginCatalogErrorsCount(nint c,nint value,out nuint count);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_catalog_errors_copy_at")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginCatalogErrorsCopyAt(nint c,nint value,nuint index,byte* b,nuint n,out nuint r);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_catalog_freshness")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginCatalogFreshness(nint c,nint value,out CodexCatalogFreshness result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_detail_destroy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginDetailDestroy(nint c,ref nint value);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_detail_summary")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginDetailSummary(nint c,nint value,out nint result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_detail_description_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginDetailDescriptionCopy(nint c,nint value,byte* b,nuint n,out nuint r);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_detail_skills_count")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginDetailSkillsCount(nint c,nint value,out nuint count);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_detail_skills_at")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginDetailSkillsAt(nint c,nint value,nuint index,out nint result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_detail_connectors_count")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginDetailConnectorsCount(nint c,nint value,out nuint count);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_detail_connectors_at")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginDetailConnectorsAt(nint c,nint value,nuint index,out nint result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_detail_mcp_servers_count")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginDetailMcpServersCount(nint c,nint value,out nuint count);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_detail_mcp_servers_copy_at")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginDetailMcpServersCopyAt(nint c,nint value,nuint index,byte* b,nuint n,out nuint r);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_detail_hook_count")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginDetailHookCount(nint c,nint value,out int result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_install_result_destroy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginInstallResultDestroy(nint c,ref nint value);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_install_result_auth_policy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginInstallResultAuthPolicy(nint c,nint value,out CodexPluginAuthPolicy result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_install_result_connectors_count")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginInstallResultConnectorsCount(nint c,nint value,out nuint count);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_install_result_connectors_at")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginInstallResultConnectorsAt(nint c,nint value,nuint index,out nint result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_install_result_has_message")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginInstallResultHasMessage(nint c,nint value,out int result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_install_result_message_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginInstallResultMessageCopy(nint c,nint value,byte* b,nuint n,out nuint r);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_hook_handler_agent_acquire")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus HookHandlerAgentAcquire(nint c,out nint value);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_hook_handler_agent_destroy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus HookHandlerAgentDestroy(nint c,ref nint value);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_hook_handler_command_create")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus HookHandlerCommandCreate(nint c,NativeStringView* command,int isAsync,out nint value);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_hook_handler_command_destroy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus HookHandlerCommandDestroy(nint c,ref nint value);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_hook_handler_command_command_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus HookHandlerCommandCommandCopy(nint c,nint value,byte* b,nuint n,out nuint r);
